# flask-review

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py
flaskr/: __init__.py  auth.py
templates/: index.html
tests/: conftest.py
